Extended the Tree Sample to show different actions and icons depending on the json outline item

--- a/tree-view-sample/package.json
+++ b/tree-view-sample/package.json
@@ -120,7 +120,11 @@
 			},
 			{
 				"command": "jsonOutline.renameNode",
-				"title": "Rename"
+				"title": "Rename",
+				"icon": {
+					"light": "resources/light/edit.svg",
+					"dark": "resources/dark/edit.svg"
+				}
 			},
 			{
 				"command": "fileExplorer.refreshFile",
@@ -182,7 +186,8 @@
 				},
 				{
 					"command": "jsonOutline.renameNode",
-					"when": "view == jsonOutline"
+					"when": "view == jsonOutline && viewItem == string",
+					"group": "inline"
 				},
 				{
 					"command": "jsonOutline.refreshNode",
